# address-go

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  deps.bzl  docker-compose.yml  example.env  go.mod  go.sum  main.go  repos.bzl
.github/workflows/: ci.yaml
api/: city.go  loccation.go  main.go  ping.go  province.go  token.go  user.go
cmd/: main.go
cmd/address/: BUILD.bazel  main.go
cmd/migrate/: BUILD.bazel  main.go
config/: db.go  env.go
dao/: city.go  city_test.go  geo.go  geo_test.go  main.go  province.go  provinceDao.go  province_test.go  user.go  user_test.go
data/: city.sql  province.sql  user.sql
database/: database.go  database_test.go
deployments/: docker-compose.yml
deployments/kubernetes/: README.md  app.yaml  clean.sh  db.yaml  namespace.yaml
docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
internal/address/config/: env.go
internal/address/datasource/: database.go  database_test.go
internal/config/: BUILD.bazel  db.go  env.go  secret.go
internal/dao/: BUILD.bazel  city.go  city_test.go  conn.go  conn_test.go  geo.go  main.go  main_test.go  province.go  province_test.go  user.go
internal/database/: BUILD.bazel  database.go  database_test.go  type.go
internal/datasource/: database.go  database_test.go
internal/models/: BUILD.bazel  city.go  location.go  province.go  token.go  user.go
internal/services/: BUILD.bazel  city.go  location.go  province.go  token.go  token_test.go  user.go
internal/utils/: BUILD.bazel  if.go  snowflake_test.go  token.go  token_test.go
middleware/: auth.go
migrations/: 0_init_table.down.sql  0_init_table.up.sql  1_seed_provinces_data.down.sql  1_seed_provinces_data.up.sql  2_seed_cities_data.down.sql  2_seed_cities_data.up.sql  3_seed_counties_data.down.sql  3_seed_counties_data.up.sql  4_seed_towns_data.down.sql  5_create_user.down.sql  5_create_user.up.sql
models/: city.go  province.go
pkg/api/: BUILD.bazel  city.go  ip.go  main.go  ping.go  province.go  token.go  user.go
pkg/app/: BUILD.bazel  server.go
pkg/middleware/: BUILD.bazel  auth.go
pkg/routes/: BUILD.bazel  router.go
pkg/server/: BUILD.bazel  dev-server.go  prod-server.go  server.go
pkg/setting/: section.go  setting.go
pkg/utils/: token_test.go
route/: router.go
routes/: router.go
scripts/: build-docker.sh  build.sh  init.sh  migrate.sh  run.sh
secrets/: address.env
services/: city.go  location.go  location_test.go  province.go  provinceService.go  province_test.go  user.go
utils/: snowflake.go  token.go  token_test.go
