load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "docs",
    srcs = ["docs.go"],
    importpath = "damingerdai/address/docs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecthomas_template//:go_default_library",
        "@com_github_swaggo_swag//:go_default_library",
    ],
)
