load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "docs",
    srcs = ["docs.go"],
    importpath = "github.com/damingerdai/address-go/docs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecthomas_template//:template",
        "@com_github_swaggo_swag//:swag",
    ],
)
