load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "address_lib",
    srcs = ["main.go"],
    importpath = "damingerdai/address/cmd/address",
    visibility = ["//visibility:private"],
    deps = ["//pkg/app"],
)

go_binary(
    name = "address",
    embed = [":address_lib"],
    visibility = ["//visibility:public"],
)


exports_files(["cmd/address"])