load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "migrate_lib",
    srcs = ["main.go"],
    importpath = "damingerdai/address/cmd/migrate",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_golang_migrate_migrate//:go_default_library",
        "@com_github_golang_migrate_migrate//database/mysql:go_default_library",
        "@com_github_golang_migrate_migrate//source/file:go_default_library",
    ],
)

go_binary(
    name = "migrate",
    embed = [":migrate_lib"],
    visibility = ["//visibility:public"],
)
