load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "migrate_lib",
    srcs = ["main.go"],
    importpath = "github.com/damingerdai/address-go/cmd/migrate",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/mysql",
        "@com_github_golang_migrate_migrate_v4//source/file",
    ],
)

go_binary(
    name = "migrate",
    embed = [":migrate_lib"],
    visibility = ["//visibility:public"],
)
