load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "db.go",
        "env.go",
        "secret.go",
    ],
    importpath = "damingerdai/address/internal/config",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_joho_godotenv//:go_default_library"],
)
