load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "database",
    srcs = [
        "database.go",
        "type.go",
    ],
    importpath = "damingerdai/address/internal/database",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_lib_pq//:pq",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "database_test",
    srcs = ["database_test.go"],
    embed = [":database"],
    deps = ["//internal/config"],
)
