load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "services",
    srcs = [
        "city.go",
        "location.go",
        "province.go",
        "token.go",
        "user.go",
    ],
    importpath = "github.com/damingerdai/address-go/internal/services",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/dao",
        "//internal/models",
        "//internal/utils",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "services_test",
    srcs = ["token_test.go"],
    embed = [":services"],
)
