load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "city.go",
        "ip.go",
        "main.go",
        "ping.go",
        "province.go",
        "token.go",
        "user.go",
    ],
    importpath = "damingerdai/address/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "//internal/database",
        "//internal/models",
        "//internal/services",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
