load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "city.go",
        "ip.go",
        "main.go",
        "ping.go",
        "province.go",
        "token.go",
        "user.go",
    ],
    importpath = "github.com/damingerdai/address-go/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "//internal/database",
        "//internal/models",
        "//internal/services",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_pkg_errors//:errors",
        "@org_golang_x_net//context",
    ],
)
