load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["auth.go"],
    importpath = "damingerdai/address/pkg/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "//internal/utils",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
