load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routes",
    srcs = ["router.go"],
    importpath = "damingerdai/address/pkg/routes",
    visibility = ["//visibility:public"],
    deps = [
        "//docs",
        "//pkg/api",
        "//pkg/middleware",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_swaggo_gin_swagger//:go_default_library",
        "@com_github_swaggo_gin_swagger//swaggerFiles:go_default_library",
    ],
)
