load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routes",
    srcs = ["router.go"],
    importpath = "github.com/damingerdai/address-go/pkg/routes",
    visibility = ["//visibility:public"],
    deps = [
        "//docs",
        "//pkg/api",
        "//pkg/middleware",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@com_github_swaggo_gin_swagger//swaggerFiles",
    ],
)
