load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/damingerdai/address-go/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/routes",
        "@com_github_joho_godotenv//:godotenv",
    ],
)
